fix(sitesearch): reconcile ES/OS index mirrors on crawl + delete both engines (#36360)
A Site Search index is one logical index mirrored across both engines, but paths that
skip the full-crawl happy path can leave the ES index and its OS twin out of sync
(forward-only phase change, Phase-0 ES-only index, incremental crawl over a missing
twin auto-creating it with a dynamic mapping, fire-and-forget shadow-create failure,
phase-scoped delete leaving an orphan).

- Add SiteSearchAPI#existsOnAllWriteEngines(name): true only when the index exists on
  every current write engine. ESSiteSearchAPI checks the plain name, OSSiteSearchAPI the
  .os-tagged name, and SiteSearchAPIImpl aggregates across writeProviders().
- Gate incremental crawls in SiteSearchJobImpl on it: when a write engine is missing the
  index, demote to a full rebuild so the mirror is recreated (correct mapping) on every
  engine instead of auto-created partial. Self-heals on the next crawl.
- SiteSearchAPIImpl#deleteIndex now sweeps BOTH engines: primary (read provider) delete is
  authoritative and propagates; the other engine is best-effort (tolerant of an unreachable
  engine, WARN) so a phase-rollback leftover twin is not orphaned in a single-provider phase.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>